# jet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
configuration/: test.json
jet_core/: CMakeLists.txt  configuration.h  core.cc  file.cc  file.h  logger.cc  logger.h  publisher.h  subscriber.h
jet_core/include/jet/: core.h
jet_driver/: CMakeLists.txt
jet_driver/src/: CMakeLists.txt  main.cc
jet_ecs/: CMakeLists.txt  ecs.cc  entity_manager.cc  entity_manager.h
jet_ecs/include/jet/: ecs.h
jet_ioc/: CMakeLists.txt  ioc.cc
jet_ioc/include/jet/: ioc.h
jet_render/: CMakeLists.txt  object.h  program.cc  program.h  rectangle.cc  rectangle.h  render.cc  texture.cc  texture.h  window.cc  window.h
jet_render/include/jet/: render.h
jet_renderer/: CMakeLists.txt
jet_renderer/include/jet/: renderer.h
jet_renderer/src/: camera.cc  camera.h  renderer.cc  renderer.h  window.cc  window.h  window_configuration.h
jet_ui/: CMakeLists.txt  ui.cc
jet_ui/include/jet/: ui.h
shaders/: rectangle.frag.glsl  rectangle.vert.glsl
src/: CMakeLists.txt  main.cc
